# std-cli

./: .gitignore  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  build.rs  mise.toml
crates/file_too_long/: Cargo.toml  README.md
crates/file_too_long/src/: lib.rs
crates/file_too_long/ui/: inline_visual_color.rs  inline_visual_color.stderr
crates/std-cli/: Cargo.toml
crates/std-cli/src/: batch.rs  config.rs  content.rs  doctor.rs  events.rs  index.rs  install.rs  install_runtime_evidence.rs  lib.rs  main.rs  release.rs  ui.rs  workflow.rs
crates/std-cli/src/doctor/: background_acceptance.rs  completion.rs  dylint.rs  report.rs  ui.rs  ui_capture.rs  ui_capture_manifest.rs  ui_capture_pixels.rs  ui_capture_png.rs  ui_capture_run.rs  ui_capture_scripts.rs  ui_capture_tests.rs  ui_checks.rs  ui_launcher.rs  ui_tokens.rs  workspace.rs
crates/std-cli/src/release/: checksum.rs  evidence.rs  files.rs  macos.rs  manifest.rs  quality.rs
crates/std-cli/src/tests/: config.rs  desktop_background_ui_guard.rs  desktop_guard.rs  desktop_guard_runtime.rs  desktop_guard_scan.rs  desktop_manual_ui_guard.rs  index.rs  local_content.rs  mod.rs  plugin.rs  release.rs  release_evidence.rs  release_quality.rs  support.rs  ui_token_guard.rs  workflow.rs  workflow_batch.rs  workflow_plan.rs  workflow_steps.rs
crates/std-cli/src/ui/: background.rs
crates/std-cli/tests/: desktop_guard.rs  external_runner_guard.rs  install_runtime_evidence.rs
crates/std-core/: Cargo.toml
crates/std-core/src/: actions.rs  app_bundle.rs  app_bundle_profile.rs  apps.rs  bootstrap.rs  config.rs  content.rs  desktop_safety.rs  discovery.rs  events.rs  execution.rs  indexing.rs  lib.rs  planner.rs  plugins.rs  registry.rs  shortcuts.rs  storage.rs  tests.rs  tooling.rs  tools.rs
crates/std-core/src/config/: fields.rs  load.rs  paths.rs
crates/std-core/src/planner/: context.rs
crates/std-core/src/plugins/: command.rs  loader.rs  runtime.rs  runtime_http.rs  runtime_paths.rs  typescript.rs
crates/std-core/src/tests/: apps.rs  apps_localization.rs  execution.rs  indexing.rs
crates/std-egui/: Cargo.toml
crates/std-egui/examples/: a11y-audit.rs
crates/std-egui/src/: a11y.rs  dashboard.rs  i18n.rs  input.rs  input_labels.rs  input_tests.rs  launcher.rs  launcher_feedback.rs  launcher_query.rs  launcher_results.rs  lib.rs  memory.rs  motion.rs  motion_tests.rs  plugin.rs  tokens.rs  ui_capture.rs
crates/std-egui/src/i18n/: catalog.rs
crates/std-egui/src/tokens/: color.rs  contrast.rs  geometry.rs  palette.rs  style.rs  theme_smoke.rs  typography.rs
crates/std-index/: Cargo.toml
crates/std-index/src/: app_bundle.rs  coverage.rs  files.rs  history.rs  lib.rs  relations.rs  search.rs  tests.rs  types.rs  util.rs  workflow.rs
crates/std-index/src/tests/: coverage.rs
crates/std-launcher/: Cargo.toml
crates/std-launcher/src/: action_bar_preview.rs  action_panel.rs  action_panel_review.rs  action_panel_smoke.rs  action_panel_state.rs  action_panel_tests.rs  app.rs  app_localization_smoke.rs  app_tests.rs  background_harness.rs  carrier.rs  cli.rs  close_smoke.rs  control_tests.rs  controller.rs  desktop_guard_tests.rs  gui_smoke.rs  hotkey.rs  keyboard.rs  keyboard_enter_window.rs  keyboard_report.rs  keyboard_smoke.rs  keyboard_tests.rs  layout_contract.rs  lib.rs  main.rs  navigation_tests.rs  nl_tests.rs  preview.rs  preview_affordance.rs  preview_behavior.rs  preview_capture.rs  preview_contract.rs  preview_evidence.rs  preview_surface_evidence.rs  preview_tests.rs  primary_action.rs  query_completion.rs  query_mode.rs  reports.rs  (+49 more)
crates/std-launcher/tests/: desktop_guard.rs  native_startup_guard.rs  ui_semantics.rs  voice_smoke.rs
crates/std-orchestration/: Cargo.toml
crates/std-orchestration/src/: ai_subtasks.rs  batch.rs  conditions.rs  executor.rs  executor_support.rs  lib.rs  loops.rs  planning.rs  trace.rs  user_interactions.rs  workflow_store.rs
crates/std-orchestration/src/tests/: ai_subtasks.rs  batch.rs  conditions.rs  execution.rs  loops.rs  mod.rs  planning.rs  store.rs  user_interactions.rs
crates/std-studio/: Cargo.toml
crates/std-studio/src/: analysis.rs  analysis_format.rs  analysis_model.rs  analysis_query_panel.rs  analysis_rows.rs  analysis_state.rs  analysis_tab_content.rs  analysis_visibility.rs  analysis_workbench.rs  app_rows.rs  app_shell_tests.rs  app_tests.rs  app_view.rs  app_workspace_tests.rs  apps.rs  apps_settings_tests.rs  bottom_panel.rs  bottom_panel_keyboard_tests.rs  bottom_panel_model.rs  commands.rs  context_help.rs  host_chrome.rs  host_chrome_drag.rs  host_window.rs  layout.rs  lib.rs  main.rs  native_app.rs  operations.rs  operations_completion.rs  operations_rows.rs  operations_visibility.rs  ops_evidence.rs  ops_index_evidence.rs  ops_plugin_evidence.rs  ops_release_evidence.rs  ops_runbook.rs  ops_steps.rs  planned_workflow.rs  plugin_security.rs  (+43 more)
crates/std-studio/src/smoke/: analysis_smoke.rs  diagnostics.rs  keyboard_smoke.rs  layout_smoke.rs  operations_smoke.rs  plugin_contracts.rs  plugin_smoke.rs  report.rs  report_pass.rs  surface_smoke.rs  workflow_builder_smoke.rs  workspace_pass.rs  workspace_policy_smoke.rs  workspace_smoke.rs
crates/std-studio/src/tests/: analysis.rs  memory.rs  operations.rs  operations_layout.rs  plugins.rs  trace.rs  windows.rs  workflow_cancel.rs  workspace_closeguard.rs  workspace_panes.rs  workspace_policy_guard.rs
crates/std-studio/src/views/: dashboard.rs  dashboard_rows.rs  history.rs  history_rows.rs  history_timeline.rs  memory.rs  memory_rows.rs  plugin_inspector_model.rs  plugin_list_model.rs  plugin_rows.rs  plugin_runtime_rows.rs  plugin_security_rows.rs  plugin_status_bar.rs  plugin_workspace_shell.rs  plugins.rs  row_metrics.rs  row_paint.rs  settings.rs  settings_binding.rs  settings_model.rs  settings_rows.rs  settings_toggle.rs  workflow_builder.rs  workflow_builder_actions.rs  workflow_builder_ai.rs  workflow_builder_contract.rs  (+11 more)
crates/std-studio/tests/: desktop_guard.rs  memory_smoke.rs  native_startup_guard.rs
crates/std-types/: Cargo.toml
crates/std-types/src/: lib.rs
(+67 files in other folders)
