[workspace]
resolver = "2"
members = [
    "crates/std-types",
    "crates/std-core",
    "crates/std-orchestration",
    "crates/std-index",
    "crates/std-egui",
    "crates/std-launcher",
    "crates/std-studio",
    "crates/std-cli",
]
exclude = ["crates/file_too_long"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["StringKe <stringke@example.com>"]
license = "MIT"
repository = "https://github.com/StringKe/std-cli"
rust-version = "1.80"

[workspace.dependencies]
# Core dependencies (realistic versions that exist today)
egui = "0.33.2"
eframe = "0.33.2"
winit = "0.30"
global-hotkey = "0.6"
tray-icon = { version = "0.24", default-features = false }
nucleo = "0.5"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plist = "1.7"
jsonschema = "0.40"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
figment = { version = "0.10", features = ["env", "toml", "json", "yaml"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
deno_core = "0.400"
deno_error = "0.7"
sha2 = "0.10"

# Testing
proptest = "1.6"
tempfile = "3.20"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[workspace.lints.clippy]
all = "warn"
too_many_lines = "warn"
too_many_arguments = "warn"
cognitive_complexity = "warn"

[workspace.metadata.dylint]
libraries = [
    { path = "crates/file_too_long" },
]
