[package]
name = "file_too_long"
version = "0.1.0"
authors = ["StringKe <stringke@example.com>"]
description = "Dylint lint that limits Rust source files to 500 lines"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "5.0.0"

[dev-dependencies]
dylint_testing = "5.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
