[package]
name = "std-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "std"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
std-types = { path = "../std-types", version = "0.1.0" }
std-core = { path = "../std-core", version = "0.1.0" }
std-orchestration = { path = "../std-orchestration", version = "0.1.0" }
std-index = { path = "../std-index", version = "0.1.0" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
