[package]
name = "std-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
std-types = { path = "../std-types", version = "0.1.0" }
std-index = { path = "../std-index", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
plist = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
figment = { workspace = true }
deno_core = { workspace = true }
deno_error = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
