[package]
name = "std-egui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
std-core = { path = "../std-core", version = "0.1.0" }
std-types = { path = "../std-types", version = "0.1.0" }
serde_json = { workspace = true }
chrono = { workspace = true }
egui = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
