[package]
name = "std-index"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
