[package]
name = "std-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "../../build.rs"

[[bin]]
name = "std-studio"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
std-types = { path = "../std-types", version = "0.1.0" }
std-core = { path = "../std-core", version = "0.1.0" }
std-egui = { path = "../std-egui", version = "0.1.0" }
std-index = { path = "../std-index", version = "0.1.0" }
std-orchestration = { path = "../std-orchestration", version = "0.1.0" }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
