[package]
name = "std-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "../../build.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
